# computer-vision-lab

./: B7.ipynb  main.py  p1.ipynb  p10.ipynb  p11.ipynb  p12.ipynb  p13.ipynb  p14.ipynb  p14_fixed.ipynb  p2.ipynb  p3.ipynb  p4.ipynb  p5.ipynb  p6.ipynb  p7.ipynb  p8.ipynb  p9.ipynb  pyproject.toml  temp.ipynb
