[project]
name = "computer-vision-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.21.0",
    "tensorflow-datasets",
    "tqdm>=4.67.3",
]
